# roo_control

./: BUILD  MODULE.bazel  README.md  library.json  library.properties
proto/: transceivers.proto
src/: roo_control.h  transceivers.pb.c  transceivers.pb.h
src/roo_control/: binary_logical_state.cpp  binary_logical_state.h  gpio_connector.h  gpio_relay.h  inert_switch.cpp  inert_switch.h  push_button.cpp  push_button.h  switch.cpp  switch.h
src/roo_control/port_extender/: pcf8574.cpp  pcf8574.h
src/roo_control/selector/: bound_selector.h  gpio_connector.h  push_button.cpp  push_button.h  selector.h
src/roo_control/sensors/: device_id.h  family.h  measurement.h  quantity.pb.c  sensor.h  universe.h
src/roo_control/sensors/binding/: binding.h
src/roo_control/sensors/binding/hal/: defaults.cpp  defaults.h  store.h
src/roo_control/sensors/binding/hal/arduino_prefs/: arduino_prefs_store.cpp  (+1 more)
src/roo_control/sensors/onewire/: onewire.h
src/roo_control/switch/: bound_switch.h  gpio_relay.h  inert_switch.cpp  inert_switch.h  switch.h
src/roo_control/thermometer/: bound_thermometer.h  expiring_thermometer.h  thermometer.cpp  thermometer.h
src/roo_control/transceivers/: family.h  id.cpp  id.h  measurement.h  notification.h  quantity.pb.h  quantity.proto  sensor.h  universe.h
src/roo_control/transceivers/binding/: binding.cpp  binding.h
src/roo_control/transceivers/binding/hal/: defaults.cpp  defaults.h  store.h
src/roo_control/transceivers/onewire/: onewire.h
src/roo_control/transceivers/remote/: client.cpp  client.h  server.cpp  server.h
(+2 files in other folders)
