module(name = "roo_control", version = "1.2.3")

bazel_dep(name = "roo_testing", version = "1.2.1")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "roo_logging", version = "1.5.3")
bazel_dep(name = "roo_quantity", version = "1.1.7")
bazel_dep(name = "roo_scheduler", version = "2.1.7")
